--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,8 @@ main{
   display: flex;
   justify-content: center;
   padding: 1em;
+  flex-direction: column;
+ 
 }
 
 ul{
@@ -126,6 +128,14 @@ button:focus-visible {
 
   
 }
+
+.jump{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: em;
+}
+
 
 @media screen and (max-width: 800px)  {
   body{
